[package]
name = "wasm-invaders"
authors = ["Michele d'Amico <michele.damico@gmail.com>"]
homepage = "https://github.com/la10736/wasm-invaders"
version = "0.1.0"
description = """
Space Invaders retro' game powered by wasm and
[rs8080](https://github.com/la10736/rs8080) (a 8080 emulator writen
in Rust).
"""
repository = "https://github.com/la10736/wasm-invaders"
license = "MIT/Apache-2.0"
keywords = ["game", "wasm", "emulator"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
rs8080 = { git="https://github.com/la10736/rs8080" }
log = "0.4"
js-sys="0.3"
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
itertools = "0.7"
rand = "0.5"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
rstest = { git = "https://github.com/la10736/rstest" }

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
debug = true

